--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "firebase": "^4.6.2",
     "history": "^4.7.2",
     "moment": "^2.19.1",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.6.1",
     "normalize.css": "7.0.0",
     "numeral": "^2.0.6",
     "react": "^15.6.1",
